# Metal-PathTracer-arm64

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
include/: IntersectionProvider.h  MetalRenderer.h  MetalRendererTypes.h  MetalShaderTypes.h
include/assets/: GltfLoader.h  TangentGen.h
include/headless/: EmbreeHeadlessRenderer.h  IHeadlessRenderer.h  MetalHeadlessRenderer.h
include/renderer/: Accumulation.h  BvhBuilder.h  DenoiserContext.h  EnvImportanceSampler.h  ImageWriter.h  MetalContext.h  MetalHandles.h  PerformanceStats.h  Pipelines.h  RenderLoop.h  RenderSettings.h  SceneAccel.h  SceneManager.h  SceneResources.h  SettingsUtils.h  UIOverlay.h  UniformBuilder.h
paper/: Makefile  paper.bib  paper.md
shaders/: common.metal  display.metal  mnee.metal  pathtrace.metal
src/: MetalRenderer.mm  main.mm  main_headless.mm
src/assets/: GltfLoader.mm  TangentGen.mm
src/headless/: EmbreeHeadlessRenderer.mm  EmbreeSmokeTest.cpp  MetalHeadlessRenderer.mm
src/renderer/: Accumulation.mm  BvhBuilder.mm  DenoiserContext.mm  EnvImportanceSampler.mm  ImageWriter.mm  MetalContext.mm  Pipelines.mm  RenderLoop.mm  SceneAccel.mm  SceneManager.mm  SceneResources.mm  SettingsUtils.mm  UIOverlay.mm  UniformBuilder.mm
tests/public/: headless_smoke_test.sh
tests/scenes/: smoke.scene
